# filecast

./: .gitignore  Cargo.toml  Makefile  README.md  filecast.desktop
src/: main.rs
src/core/: app.rs  apps.rs  clipboard.rs  event.rs  fs.rs  history.rs  mod.rs  mode.rs  search.rs  search_config.rs  settings.rs  ui.rs
src/ui/: launcher.rs  mod.rs  theme.rs
