[package]
name = "filecast"
version = "0.2.0"
edition = "2024"
authors = ["Thembinkosi Mkhonta (thembinkosimkhonta01@gmail.com)"]

description = "A fast Spotlight/Raycast-style launcher for Linux with fuzzy search, file browser, grep, and app launching."
license = "MIT"
homepage = "https://github.com/ThembinkosiThemba/filecast"
repository = "https://github.com/ThembinkosiThemba/filecast"
readme = "README.md"
keywords = ["launcher", "spotlight", "raycast", "linux", "productivity"]
include = ["src/**/*.rs", "src/assets/*", "Cargo.toml", "README.md"]


[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
dirs = "6.0.0"
eframe = "0.30"
egui = "0.30"
freedesktop-desktop-entry = "0.7"
global-hotkey = "0.6"
image = "0.25"
opener = "0.8.4"
rusqlite = {version = "0.38.0", features=["bundled"]}
tokio = {version = "1.49.0", features = ["full", "process"]}

[[bin]]
name = "filecast"
path = "src/main.rs"
