[package]
name = "filecast"
version = "0.2.1"
edition = "2024"
authors = ["Thembinkosi Mkhonta (thembinkosimkhonta01@gmail.com)"]

description = "A fast Spotlight/Raycast-style launcher for Linux with fuzzy search, file browser, grep, and app launching."
license = "MIT"
homepage = "https://github.com/ThembinkosiThemba/filecast"
repository = "https://github.com/ThembinkosiThemba/filecast"
readme = "README.md"
keywords = ["launcher", "spotlight", "raycast", "linux", "productivity"]
include = ["src/**/*.rs", "src/assets/*", "Cargo.toml", "README.md"]


[dependencies]
anyhow = "1.0.100"
arboard = "3.4"
chrono = "0.4.43"
dirs = "6.0.0"
eframe = "0.30"
egui = "0.30"
freedesktop-desktop-entry = "0.7"
global-hotkey = "0.6"
image = "0.25"
opener = "0.8.4"
rusqlite = {version = "0.38.0", features=["bundled"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = {version = "1.49.0", features = ["full", "process"]}

[[bin]]
name = "filecast"
path = "src/main.rs"

[package.metadata.deb]
maintainer = "Thembinkosi Mkhonta <thembinkosimkhonta01@gmail.com>"
copyright = "2024, Thembinkosi Mkhonta"
license-file = ["LICENSE", "0"]
extended-description = """Filecast is a fast Spotlight/Raycast-style application launcher for Linux.
Features include fuzzy search for apps and files, file browser with vim-style navigation,
grep search through file contents, and shell command execution."""
section = "utility"
priority = "optional"
assets = [
    ["target/release/filecast", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/filecast/", "644"],
    ["src/assets/icon.png", "usr/share/icons/hicolor/128x128/apps/filecast.png", "644"],
    ["filecast.desktop", "usr/share/applications/filecast.desktop", "644"],
]

